add /instances-by-process-id/{id} [get] endpoint
